<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cocosh.shmstore.login.ui.activity.BindingPhoneActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/h3">

        <com.cocosh.shmstore.widget.eidttext.SmEditText
            android:id="@id/edtPhone"
            style="@style/EidttextStyle"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="@dimen/w36"
            android:paddingRight="@dimen/w36" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/h3">

        <com.cocosh.shmstore.widget.eidttext.SmEditText
            android:id="@id/edtCode"
            style="@style/CodeEidttextStyle"
            android:hint="@string/inputCode"
            android:paddingLeft="@dimen/w36"
            android:paddingRight="@dimen/w36" />

        <com.cocosh.shmstore.widget.button.TimerButton
            android:id="@id/btnCode"
            style="@style/CodeButtonStyle"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/w36"
            android:layout_marginLeft="@dimen/w36"
            android:text="@string/getCode" />

    </RelativeLayout>

    <Button
    android:id="@id/btnNext"
    style="@style/ButtonStyle"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="@dimen/h80"
    android:background="@color/grayBtn"
    android:text="@string/next" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/h55"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/h40">

        <com.cocosh.shmstore.widget.textview.CheckedICONTextView
            android:id="@id/cbDesc"
            android:layout_width="@dimen/w105"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/iconUnChecked"
            android:textColor="@color/grayText"
            android:textSize="@dimen/w45" />

        <TextView
            android:id="@id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/regAgree"
            android:textColor="@color/grayText"
            android:textSize="@dimen/h40" />
    </LinearLayout>
</LinearLayout>
