<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/h175"
            android:layout_marginTop="@dimen/h3"
            android:orientation="horizontal"
            android:background="@color/white">

            <com.cocosh.shmstore.widget.eidttext.SmEditText
                android:id="@+id/etSetPsd"
                style="@style/PassEdittextStyle"
                android:hint="@string/inputPassDesc"
                android:paddingLeft="@dimen/w32"
                android:paddingRight="@dimen/w32"
                android:layout_weight="1"/>

            <RelativeLayout
                android:id="@+id/rlPsd"
                android:layout_width="@dimen/w150"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/w10"
                android:paddingRight="@dimen/w32">


                <com.cocosh.shmstore.widget.textview.ICONTextView
                    android:id="@+id/itvHidePsd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/iconHiden"
                    android:textColor="#C7C7C7"
                    android:textSize="@dimen/w50"
                    android:visibility="visible" />

                <com.cocosh.shmstore.widget.textview.ICONTextView
                    android:id="@+id/itvShowPsd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/iconShow"
                    android:textColor="#C7C7C7"
                    android:textSize="@dimen/w50"
                    android:visibility="invisible" />

            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btComplete"
            style="@style/ButtonStyle"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/h90"
            android:text="@string/comple" />

    </LinearLayout>
</layout>
